[package]

name = "protobuf"
version = "2.8.1"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
documentation = "https://github.com/stepancheg/rust-protobuf/blob/master/README.md"
description = """
Rust implementation of Google protocol buffers
"""

[lib]
doctest = false
bench = false

[features]
with-bytes = ["bytes"]
with-serde = ["serde", "serde_derive"]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[dependencies]
bytes = { version = "0.5", optional = true, git = "https://github.com/mesalock-linux/bytes-sgx" }
serde        = { version = "1.0", optional = true, git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { version = "1.0", optional = true, git = "https://github.com/mesalock-linux/serde-sgx" }
sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[package.metadata.docs.rs]
all-features = true
