[package]

name = "protobuf"
version = "2.8.1"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
documentation = "https://github.com/stepancheg/rust-protobuf/blob/master/README.md"
description = """
Rust implementation of Google protocol buffers
"""

[lib]
doctest = false
bench = false

[features]
with-bytes = ["bytes"]
with-serde = ["serde", "serde_derive"]
default = []
mesalock_sgx = ["sgx_tstd","serde/mesalock_sgx"]

[dependencies]
bytes = { branch = "veracruz-v1", optional = true, git = "https://github.com/veracruz-project/bytes.git" }
serde        = { branch = "veracruz-v1", optional = true, git = "https://github.com/veracruz-project/serde.git" }
serde_derive = { branch = "veracruz-v1", optional = true, git = "https://github.com/veracruz-project/serde.git" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[package.metadata.docs.rs]
all-features = true
