[package]
name = "protoc-rust"
version = "2.8.1"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc-rust/"
repository = "https://github.com/stepancheg/rust-protobuf/tree/master/protoc-rust/"
description = """
protoc --rust_out=... available as API. protoc needs to be in $PATH, protoc-gen-run does not.
"""

[lib]
doctest = false
bench = false

[dependencies]
#protoc = { path = "../protoc", version = "=2.8.1" }
#protobuf = { path = "../protobuf", version = "=2.8.1" }
protobuf-codegen = { path = "../protobuf-codegen", version = "=2.8.1" }
protoc = { rev = "v2.8.1", git = "https://github.com/stepancheg/rust-protobuf.git", version = "=2.8.1" }
protobuf = { rev = "v2.8.1", git = "https://github.com/stepancheg/rust-protobuf.git", version = "=2.8.1" }
#protobuf-codegen = { rev = "v2.8.1", git = "https://github.com/stepancheg/rust-protobuf.git", version = "=2.8.1" }
#sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
tempfile = "3"

[package.metadata.docs.rs]
all-features = true

[features]
std = []
#mesalock_sgx = ["sgx_tstd"]
